# test-rendering

./: CMakeLists.txt  requirements.txt
scripts/: test_rendering.py
test/test-rendering/: main.cpp
